Fix crash on some sites loading with Network Analyzer open

BUG:258947